// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`edit subject  > should get current wiki info 1`] = `
Object {
  "availablePlatform": Array [
    Object {
      "id": 0,
      "text": "其他",
      "wiki_tpl": "Anime",
    },
    Object {
      "id": 1,
      "text": "TV",
      "wiki_tpl": "TVAnime",
    },
    Object {
      "id": 2,
      "text": "OVA",
      "wiki_tpl": "OVA",
    },
    Object {
      "id": 3,
      "text": "剧场版",
      "wiki_tpl": "Movie",
    },
    Object {
      "id": 5,
      "text": "WEB",
      "wiki_tpl": "TVAnime",
    },
    Object {
      "id": 2006,
      "text": "动态漫画",
      "wiki_tpl": "TVAnime",
    },
  ],
  "id": 8,
  "infobox": "{{Infobox animanga/TVAnime
|中文名= Code Geass 反叛的鲁路修R2
|别名={
[叛逆的鲁路修R2]
[Code Geass: Hangyaku no Lelouch R2]
[叛逆的勒鲁什R2]
[叛逆的鲁鲁修R2]
[コードギアス 反逆のルルーシュR2]
[Code Geass: Lelouch of the Rebellion R2]
[叛逆的勒路什R2]
}
|话数= 25
|放送开始= 2008年4月6日
|放送星期=
|官方网站= http://www.geass.jp/r2/
|播放电视台= 每日放送
|其他电视台=
|播放结束= 2008年9月28日
|其他=
|Copyright= （C）2006 SUNRISE inc./MBS
|导演= 谷口悟朗
|系列构成= 大河内一楼
|人物原案= CLAMP
|人物设定= 木村貴宏
|美术监督= 菱沼由典
|色彩设计= 岩沢れい子
|摄影监督= 大矢創太
|音响监督= 浦上靖夫、井澤基
|音乐= 中川幸太郎、黒石ひとみ
|音乐制作= AUDIO PLANNING U
|动画制作= サンライズ
}}",
  "metaTags": Array [],
  "name": "コードギアス 反逆のルルーシュR2",
  "nsfw": false,
  "platform": 1,
  "summary": "　　“东京决战”一年后，布里塔尼亚少年鲁路修在11区（原日本国）过着平凡的学生生活。但是，鲁路修与弟弟罗洛的一次出行，遇到了黑色骑士团的余党。在与少女C.C再次结成契约之后，尘封的记忆摆在了鲁路修的面前。
　　身为帝国王子的鲁路修，为了建立人人平等的世界、让妹妹娜娜丽幸福的世界，而使用GEASS，令人绝对服从的力量，带领黑色骑士团向帝国宣战。带上假面化名ZERO的他，却在一年前的“东京决战”中被好友朱雀击败，被帝国皇帝抹去了记忆。
　　现在，恢复记忆的鲁路修不仅要面对帝国的强大军事力量，更要面对虚假的弟弟罗洛、失踪的妹妹娜娜丽、不知敌友的中华联盟、内部出现分歧的黑色骑士团。面对内忧外患，鲁路修走上了GEASS之力的诅咒——孤独的王之路。 ",
  "typeID": 2,
}
`;

exports[`edit subject  > should get edit history 1`] = `
Array [
  Object {
    "commitMessage": "",
    "createdAt": 1570720134,
    "creator": Object {
      "username": "",
    },
    "id": 643749,
    "type": 1,
  },
  Object {
    "commitMessage": "添加别名",
    "createdAt": 1522689610,
    "creator": Object {
      "username": "79290",
    },
    "id": 551942,
    "type": 1,
  },
  Object {
    "commitMessage": "",
    "createdAt": 1430296495,
    "creator": Object {
      "username": "189074",
    },
    "id": 275753,
    "type": 1,
  },
  Object {
    "commitMessage": "修正笔误",
    "createdAt": 1417061160,
    "creator": Object {
      "username": "26862",
    },
    "id": 241960,
    "type": 1,
  },
  Object {
    "commitMessage": "内容扩充",
    "createdAt": 1364576814,
    "creator": Object {
      "username": "130027",
    },
    "id": 133888,
    "type": 1,
  },
  Object {
    "commitMessage": "",
    "createdAt": 1357187180,
    "creator": Object {
      "username": "104510",
    },
    "id": 113779,
    "type": 1,
  },
  Object {
    "commitMessage": "",
    "createdAt": 1336751754,
    "creator": Object {
      "username": "9023",
    },
    "id": 71214,
    "type": 1,
  },
  Object {
    "commitMessage": "简介修正",
    "createdAt": 1325596293,
    "creator": Object {
      "username": "8766",
    },
    "id": 53051,
    "type": 1,
  },
  Object {
    "commitMessage": "",
    "createdAt": 1285863983,
    "creator": Object {
      "username": "8025",
    },
    "id": 14884,
    "type": 1,
  },
  Object {
    "commitMessage": "合并恢复版本",
    "createdAt": 1272719723,
    "creator": Object {
      "username": "1",
    },
    "id": 7493,
    "type": 1,
  },
]
`;

exports[`edit subject  > should get subject revision wiki info 1`] = `
Object {
  "id": 8,
  "infobox": "{{Infobox animanga/TVAnime
|中文名= Code Geass 反叛的鲁路修R2
|别名={
[叛逆的鲁路修R2]
[Code Geass: Hangyaku no Lelouch R2]
[叛逆的勒鲁什R2]
[叛逆的鲁鲁修R2]
[コードギアス 反逆のルルーシュR2]
[Code Geass: Lelouch of the Rebellion R2]
[叛逆的勒路什R2]
}
|话数= 25
|放送开始= 2008年4月6日
|放送星期=
|官方网站= http://www.geass.jp/
|播放电视台= 每日放送
|其他电视台=
|播放结束= 2008年9月28日
|其他=
|Copyright= （C）2006 SUNRISE inc./MBS
|导演= 谷口悟朗
|系列构成= 大河内一楼
|人物原案= CLAMP
|人物设定= 木村貴宏
|美术监督= 菱沼由典
|色彩设计= 岩沢れい子
|摄影监督= 大矢創太
|音响监督= 浦上靖夫、井澤基
|音乐= 中川幸太郎、黒石ひとみ
|音乐制作= AUDIO PLANNING U
|动画制作= サンライズ
}}",
  "metaTags": Array [],
  "name": "コードギアス 反逆のルルーシュR2",
  "summary": "　　“东京决战”一年后，布里塔尼亚少年鲁路修在11区（原日本国）过着平凡的学生生活。但是，鲁路修与弟弟罗洛的一次出行，遇到了黑色骑士团的余党。在与少女C.C再次结成契约之后，尘封的记忆摆在了鲁路修的面前。
　　身为帝国王子的鲁路修，为了建立人人平等的世界、让妹妹娜娜丽幸福的世界，而使用GEASS，令人绝对服从的力量，带领黑色骑士团向帝国宣战。带上假面化名ZERO的他，却在一年前的“东京决战”中被好友朱雀击败，被帝国皇帝抹去了记忆。
　　现在，恢复记忆的鲁路修不仅要面对帝国的强大军事力量，更要面对虚假的弟弟罗洛、失踪的妹妹娜娜丽、不知敌友的中华联盟、内部出现分歧的黑色骑士团。面对内忧外患，鲁路修走上了GEASS之力的诅咒——孤独的王之路。 ",
}
`;

exports[`edit subject  > should get user edit history 1`] = `
Object {
  "data": Array [
    Object {
      "commitMessage": "合并恢复版本",
      "createdAt": 1272719723,
      "id": 7493,
      "name": "コードギアス反逆のルルーシュR2",
      "subjectID": 8,
      "type": 1,
    },
    Object {
      "commitMessage": "维基化",
      "createdAt": 1232787986,
      "id": 37,
      "name": "リズム天国ゴールド",
      "subjectID": 9,
      "type": 1,
    },
  ],
  "total": 2,
}
`;

exports[`subject relations > should get subject relation history 1`] = `
Object {
  "data": Array [
    Object {
      "commitMessage": "条目关联修改",
      "createdAt": 1538735733,
      "creator": Object {
        "username": "9023",
      },
      "id": 920431,
      "type": 17,
    },
    Object {
      "commitMessage": "条目关联修改",
      "createdAt": 1538735710,
      "creator": Object {
        "username": "9023",
      },
      "id": 920430,
      "type": 17,
    },
    Object {
      "commitMessage": "条目关联修改",
      "createdAt": 1521262534,
      "creator": Object {
        "username": "213723",
      },
      "id": 839911,
      "type": 17,
    },
    Object {
      "commitMessage": "条目关联修改",
      "createdAt": 1518264070,
      "creator": Object {
        "username": "273803",
      },
      "id": 823483,
      "type": 17,
    },
    Object {
      "commitMessage": "条目关联修改",
      "createdAt": 1516043521,
      "creator": Object {
        "username": "9023",
      },
      "id": 813021,
      "type": 17,
    },
    Object {
      "commitMessage": "条目关联修改",
      "createdAt": 1515057017,
      "creator": Object {
        "username": "279427",
      },
      "id": 808252,
      "type": 17,
    },
    Object {
      "commitMessage": "条目关联修改",
      "createdAt": 1508671780,
      "creator": Object {
        "username": "265239",
      },
      "id": 781521,
      "type": 17,
    },
    Object {
      "commitMessage": "条目关联修改",
      "createdAt": 1508565225,
      "creator": Object {
        "username": "9023",
      },
      "id": 781048,
      "type": 17,
    },
    Object {
      "commitMessage": "条目关联修改",
      "createdAt": 1508565156,
      "creator": Object {
        "username": "9023",
      },
      "id": 781045,
      "type": 17,
    },
    Object {
      "commitMessage": "条目关联修改",
      "createdAt": 1501218509,
      "creator": Object {
        "username": "265239",
      },
      "id": 742823,
      "type": 17,
    },
    Object {
      "commitMessage": "条目关联修改",
      "createdAt": 1482214372,
      "creator": Object {
        "username": "26862",
      },
      "id": 631769,
      "type": 17,
    },
    Object {
      "commitMessage": "条目关联修改",
      "createdAt": 1469993486,
      "creator": Object {
        "username": "229195",
      },
      "id": 563926,
      "type": 17,
    },
    Object {
      "commitMessage": "条目关联修改",
      "createdAt": 1469991869,
      "creator": Object {
        "username": "229195",
      },
      "id": 563908,
      "type": 17,
    },
    Object {
      "commitMessage": "条目关联修改",
      "createdAt": 1457162584,
      "creator": Object {
        "username": "9023",
      },
      "id": 489665,
      "type": 17,
    },
    Object {
      "commitMessage": "条目关联修改",
      "createdAt": 1450235756,
      "creator": Object {
        "username": "209098",
      },
      "id": 455662,
      "type": 17,
    },
    Object {
      "commitMessage": "条目关联修改",
      "createdAt": 1422275679,
      "creator": Object {
        "username": "50094",
      },
      "id": 315271,
      "type": 17,
    },
    Object {
      "commitMessage": "条目关联修改",
      "createdAt": 1422275239,
      "creator": Object {
        "username": "50094",
      },
      "id": 315264,
      "type": 17,
    },
    Object {
      "commitMessage": "条目关联修改",
      "createdAt": 1419133176,
      "creator": Object {
        "username": "159245",
      },
      "id": 302125,
      "type": 17,
    },
    Object {
      "commitMessage": "条目关联修改",
      "createdAt": 1419133079,
      "creator": Object {
        "username": "159245",
      },
      "id": 302124,
      "type": 17,
    },
    Object {
      "commitMessage": "条目关联修改",
      "createdAt": 1395393197,
      "creator": Object {
        "username": "21804",
      },
      "id": 213326,
      "type": 17,
    },
  ],
  "total": 23,
}
`;

exports[`subject relations > should get subject relation revision wiki info 1`] = `
Array [
  Object {
    "order": 0,
    "subject": Object {
      "id": 793,
      "name": "",
      "nameCN": "",
      "typeID": 2,
    },
    "type": 2,
  },
  Object {
    "order": 0,
    "subject": Object {
      "id": 24593,
      "name": "",
      "nameCN": "",
      "typeID": 2,
    },
    "type": 8,
  },
  Object {
    "order": 0,
    "subject": Object {
      "id": 35866,
      "name": "",
      "nameCN": "",
      "typeID": 2,
    },
    "type": 11,
  },
  Object {
    "order": 0,
    "subject": Object {
      "id": 99952,
      "name": "",
      "nameCN": "",
      "typeID": 2,
    },
    "type": 4,
  },
  Object {
    "order": 1,
    "subject": Object {
      "id": 199229,
      "name": "",
      "nameCN": "",
      "typeID": 2,
    },
    "type": 10,
  },
  Object {
    "order": 2,
    "subject": Object {
      "id": 199230,
      "name": "",
      "nameCN": "",
      "typeID": 2,
    },
    "type": 10,
  },
  Object {
    "order": 3,
    "subject": Object {
      "id": 199231,
      "name": "",
      "nameCN": "",
      "typeID": 2,
    },
    "type": 10,
  },
]
`;
